--- a/calc.html
+++ b/calc.html
@@ -13,23 +13,21 @@
       <input type="number" id="display" />
       <br />
       <div class="all">
-        <button class="num" onclick="click(1)">1</button>
-        <button class="num" type="button" onclick="click(2)">2</button>
-        <button class="num" type="button" onclick="click(3)">3</button>
-        <button class="num" type="button" onclick="click(4)">4</button>
-        <button class="num" type="button" onclick="click(5)">5</button>
-        <br />
-        <button class="num" type="button" onclick="click(6)">6</button>
-        <button class="num" type="button" onclick="click(7)">7</button>
-        <button class="num" type="button" onclick="click(8)">8</button>
-        <button class="num" type="button" onclick="click(9)">9</button>
-        <button class="num" type="button" onclick="click(0)">0</button>
-        <br />
-        <button class="num" type="button" onclick="click('+')">+</button>
-        <button class="num" type="button" onclick="click('-')">-</button>
-        <button class="num" type="button" onclick="click('*')">*</button>
-        <button class="num" type="button" onclick="click('/')">/</button>
-        <button class="num" type="button" onclick="click('=')">=</button>
+        <button onclick="btnClick(1)" class="btn">1</button>
+        <button onclick="btnClick(2)" class="btn">2</button>
+        <button onclick="btnClick(3)" class="btn">3</button>
+        <button onclick="btnClick(4)" class="btn">4</button>
+        <button onclick="btnClick(5)" class="btn">5</button>
+        <button onclick="btnClick(6)" class="btn">6</button>
+        <button onclick="btnClick(7)" class="btn">7</button>
+        <button onclick="btnClick(8)" class="btn">8</button>
+        <button onclick="btnClick(9)" class="btn">9</button>
+        <button onclick="btnClick(0)" class="btn">0</button>
+        <button onclick="btnClick('+')" class="btn">+</button>
+        <button onclick="btnClick('-')" class="btn">-</button>
+        <button onclick="btnClick('*')" class="btn">*</button>
+        <button onclick="btnClick('/')" class="btn">/</button>
+        <button onclick="btnClick('=')" class="btn">=</button>
       </div>
     </div>
   </body>
