--- a/calc.html
+++ b/calc.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <input type="number" id="display" />
+      <input type="text" id="display" />
       <br />
       <div class="all">
         <button onclick="btnClick(1)" class="btn">1</button>
@@ -27,7 +27,7 @@
         <button onclick="btnClick('-')" class="btn">-</button>
         <button onclick="btnClick('*')" class="btn">*</button>
         <button onclick="btnClick('/')" class="btn">/</button>
-        <button onclick="btnClick('=')" class="btn">=</button>
+        <button onclick="equalClick()" class="btn">=</button>
       </div>
     </div>
   </body>
